--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --passWithNoTests",
     "dev": "npx ts-node index.ts"
   },
   "keywords": [],
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.21",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "jest": "^29.7.0"
   }
 }
