--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
   "name": "books-api",
+  "jest": {
+    "testEnvironment": "jsdom"
+  },
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --passWithNoTests",
+    "test": "jest",
     "dev": "npx ts-node index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "typescript": "^5.4.2"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.24.3",
+    "@babel/preset-typescript": "^7.24.1",
     "@types/express": "^4.17.21",
     "axios": "^1.6.8",
+    "babel-jest": "^29.7.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0"
   }
 }
